<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPatientInfoActivity">

    <GridLayout
        android:id="@+id/gridLayoutReadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingTop="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:paddingLeft="20dp"
            android:text="@string/patientId"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textViewPatientId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/readingId"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/editTextReadingId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/numberFormatHints" />


        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="10"
            android:hint="@string/dateFormatHints"
            android:inputType="text" />



        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:text="@string/type"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Spinner
            android:layout_row="3"
            android:layout_column="1"
            android:id="@+id/spinnerReadingType"
            android:layout_width="233dp"
            android:layout_height="match_parent"
            android:dropDownWidth="match_parent"
            android:entries="@array/reading_type_array"
            android:textAlignment="center" />


        <TextView
            android:layout_row="4"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/value"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:layout_row="4"
            android:layout_column="1"
            android:id="@+id/editTextValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/numberFormatHints"/>


        <TextView
            android:layout_row="5"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/clinic"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Spinner
            android:id="@+id/spinnerClinicId"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:dropDownWidth="match_parent"
            android:textAlignment="center" />


    </GridLayout>

    <Button
        android:id="@+id/buttonAddReadings"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:onClick="onClickAddReadingsToSelectedPatient"
        android:text="@string/add_readings"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="18sp" />

</LinearLayout>